<package format="2">
  <name>qb_chain_controllers</name>
  <version>2.1.1</version>
  <description>
    This package contains the specific controllers for qbrobotics® kinematic structures, e.g. the qbdelta controller.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="alessandro.tondo@qbrobotics.com">Alessandro Tondo</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://bitbucket.org/qbrobotics/qbchain-ros/issues</url>
  <url type="repository">https://bitbucket.org/qbrobotics/qbchain-ros</url>
  <url type="website">http://wiki.ros.org/qb_chain_controllers</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>

  <!--TODO: <test_depend>gtest</test_depend>-->
  <doc_depend>doxygen</doc_depend>
</package>